--- a/index.html
+++ b/index.html
@@ -1,26 +1,50 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
-    <title>Моя первая веб-страница</title>
+    <title> Любители корги</title>
 </head>
 
-<body>
+<body>      <!-- Главная -->
     <header>
-        <a href="#">Главная</a>
+        <!-- шапка сайта: название, логотип, главное меню. Повторяется на всех страницах-->
+        <a href="#" title="Главная"><img src="images/logo_club.png" alt="Главная страница" width="150">Главная</a>
+        <span> | </span>
         <a href="pages/about.html">О нас</a>
+        <span> | </span>
         <a href="pages/contats.html">Контакты</a>
-    </header>    
+    </header>
+
     <main>
-        <h1>Моя первая веб-страница</h1> 
-        <h2>Про меня</h2>
-        <p>Меня зовут Ольга. Я работаю <strong>системным администратором</strong>. Решила сменить профессию.</p>
-        <p>Живу на Урале. Люблю свою собаку.</p>
-        <h2>Чему я хочу научиться</h2>
-        <p>На <em>этом</em> курте я хочу научиться создавать сайты с нуля.</p>
+        <!-- Начальная страница -->
+        <h1> Любители корги</h1>
+        <h2>Привет!</h2>
+        <p>
+            <!-- Представление меня-->
+            Меня зовут Ольга. Я живу на Южном Урале, работаю системным администратором, и учусь в школе <a
+                href="https://skillfactory.ru/" target="_blank"><span>&copy;&nbsp;Skillfactory</span></a><br>
+        </p>
+        <p>
+            <!-- Главный герой-->
+            Пять лет назад у меня появился самый <strong>лучший друг</strong> - <br>
+            щенок породы вельш-корги пемброк по парспоту <strong>&laquo;Зорро Храброе Сердце&raquo;</strong>, или просто
+            <strong>Захарик!</strong>
+        </p>
+        
+        <p> <img src="images/20180523_192222.jpg" height="300"></p>
+        <p> 
+            <!-- Клуб-->
+            Тогда я вступила в лигу <a href="pages/about.html"><strong><em>любителей корги</em></strong></a> нашего городка.<br><br>
+        </p>
     </main>
     <footer>
-        <span>&copy;&nbsp;Skillfactory</span>
+        <hr>
+        <!-- Подвал -->
+        <a href="pages/about.html">О нас</a>
+        <span> | </span>
+        <a href="pages/contats.html">Контакты</a>
     </footer>
 </body>
+
 </html>
