--- a/pages/about.html
+++ b/pages/about.html
@@ -1,26 +1,36 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
-    <title>О нас - Моя первая веб-страница</title>
+    <title>О нас - Любители корги</title>
 </head>
-<body>
+
+<body>      <!-- О нас -->
     <header>
-        <a href="../index.html">Главная</a>
+        <!-- шапка сайта: название, логотип, главное меню. Повторяется на всех страницах-->
+        <a href="../index.html" title="Главная"><img src="../images/logo_club.png" alt="Главная страница" width="150">Главная</a>
+        <span> | </span>
         <a href="#">О нас</a>
+        <span> | </span>
         <a href="contats.html">Контакты</a>
-    </header>    
+    </header>
+
     <main>
-        <h1>О нас</h1> 
-        <p>Лучший чугун в мире!<br> 
-            Покупайте <strong>каслинское литье</strong> только у нас!
-        </p>
-        <p>Живу на Урале. Люблю свою собаку.</p>
-        <h2>Чему я хочу научиться</h2>
-        <p>На <em>этом</em> курте я хочу научиться создавать сайты с нуля.</p>
+        <h1>Любители корги</h1>
+        <p>Нашей лиге уже 5 лет.<br> 
+            Мы насчитываем более <strong>30</strong> коржиков.</p>
+        <p>Если у вас есть собака породы корги - </p>
+        <h2>Ждем вас!</h2>
+        <a href="contats.html">Наши контакты</a>
     </main>
     <footer>
-        <span>&copy;&nbsp;Skillfactory</span>
+        <hr>
+        <!-- Подвал -->
+        <a href="../index.html">Главная</a>
+        <span> | </span>
+        <a href="contats.html">Контакты</a>
     </footer>
 </body>
+
 </html>
