--- a/pages/contats.html
+++ b/pages/contats.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Контакты - Моя первая веб-страница</title>
+    <title>Контакты - Любители корги</title>
 </head>
-<body>
+<body>      <!-- Контакты -->
     <header>
         <a href="../index.html">Главная</a>
-        <a href="./about.html">О нас</a>
+        <a href="about.html">О нас</a>
         <a href="#">Контакты</a>
     </header>    
     <main>
@@ -19,7 +19,11 @@
         </address>
     </main>
     <footer>
-        <span>&copy;&nbsp;Skillfactory</span>
+        <hr>
+        <!-- Подвал -->
+        <a href="../index.html">Главная</a>
+        <span> | </span>
+        <a href="about.html">О нас</a>
     </footer>
 </body>
 </html>
