fix error ather  Validator W3C

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 
 <head>
     <meta charset="utf-8">
@@ -32,7 +32,7 @@
             <strong>Захарик!</strong>
         </p>
         
-        <p> <img src="images/20180523_192222.jpg" height="300"></p>
+        <p> <img src="images/20180523_192222.jpg" alt="Мой Захар" height="300"></p>
         <p> 
             <!-- Клуб-->
             Тогда я вступила в лигу <a href="pages/about.html"><strong><em>любителей корги</em></strong></a> нашего городка.<br><br>
